# fieldlight-proofs

./: README.md  SPEC.md  pyproject.toml
docs/: public-artifact-process.md  reorientation-note.md
examples/: article.md  artifact-entry-example.json
fieldlight_proofs/: __init__.py  cli.py  core.py
proofs/: manifest-example.json
tests/: test_core.py
